--- a/src/ViewUIs/AllCoursesUI.form
+++ b/src/ViewUIs/AllCoursesUI.form
@@ -49,7 +49,7 @@
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Show Details"/>
+              <text value="Show Details or Make New Course"/>
             </properties>
           </component>
           <component id="2634d" class="javax.swing.JButton" binding="doneButton" default-binding="true">
@@ -58,14 +58,6 @@
             </constraints>
             <properties>
               <text value="Done"/>
-            </properties>
-          </component>
-          <component id="a4390" class="javax.swing.JButton" binding="newButton" default-binding="true">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="New"/>
             </properties>
           </component>
         </children>
